--- a/index.html
+++ b/index.html
@@ -2,33 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Luq</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link rel="stylesheet" href="http://baijus.com/yelowhouse/assets/css/common.css">
-  </head>
-  <style>
-    .body, h1{
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    .profile{
-      width: 60%;
-      display: inline-block;
-      height: 100vh;
-      background: url(https://yt3.ggpht.com/a-/AAuE7mDLNRyEr5juzJCv5YEHA3RBUslsc5azXUnCdw=s900-mo-c-c0xffffffff-rj-k-no) no-repeat;
-    }
-    .desc{
-      width: 30%;
-      display: inline-block;
-      vertical-align: top;
-      padding: 40px;
-      padding-top: 20%;
-    }
-  </style>
-  <body >
-    <div class="profile"></div>
-    <div class="desc">
-      <h1>Luqman Paravetty</h1>
-      <h4>luckieee@gmail.com</h4>
-    </div>
-  </body>
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  <link href="./main.css" rel="stylesheet"></head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  <script type="text/javascript" src="./production.js"></script></body>
 </html>
